fixed bugs and some failing tests